Add Profile Image
Added a profile image to the index.html

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 		<title>Personal Website</title>
 	</head>
 	<body>
-	<h1>Arturo Avilés</h1>
+		<center>
+		<img src="img/circle.png">
+		<br>
+		<h1>Arturo Avilés</h1>
+		</center>
 	</body>
 </html>
