--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	</head>
 	<body>
 		<center>
-		<img src="img/circle.png">
+		<img src="img/circle.png" width="200px" hieght="200px">
 		<br>
 		<h1>Arturo Avilés</h1>
 		</center>
