--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <html>
 	<head>
-		<title>Personal Website</title>
+		<meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="shortcut icon" href="favicon.ico">
+        <title>Personal Website</title>
+        <!-- Bootstrap -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 	</head>
 	<body>
-		<center>
-		<img src="img/circle.png" width="200px" hieght="200px">
-		<br>
-		<h1>Arturo Avilés</h1>
-		</center>
+		<div class="container">
+			<center>
+			<img src="img/circle.png" width="200px" hieght="200px">
+			<br>
+			<h1>Arturo Avilés</h1>
+			</center>
+		</div>
+
+
+
+
+		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <!-- Include all compiled plugins (below), or include individual files as needed -->
+        <script src="js/bootstrap.min.js"></script>
 	</body>
 </html>
