Add Menu to the index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 	</head>
 	<body>
 		<div class="container">
+            <br>
+            <header>
+                <nav class="navbar navbar-default navbar-fixed-top">
+                    <div class="container-fluid">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-1">
+                                <span class="sr-only">Menu</span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                        </div>
+                        <div class="collapse navbar-collapse" id="navbar-1">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="">Inicio</a></li>
+                                <li><a href="renta.php">Renta</a></li>
+                                <li><a href="productos.php">Productos</a></li>
+                                <li><a href="responsables.php">Responsables</a></li>
+                                <li><a href="actualizaciones.php">Últimas Actualizaciones</a></li>
+                                <li><a href="ayuda.php">Ayuda</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </nav>
+            </header>
+        </div>
+
+
+        
+		<div class="container">
 			<center>
 			<img src="img/circle.png" width="200px" hieght="200px">
 			<br>
