--- a/index.html
+++ b/index.html
@@ -38,10 +38,11 @@
         </div>
 
 
-        <br><br><br>
+        <br><br><br><br>
 		<div class="container">
 			<center>
 			<img src="img/circle.png" width="200px" hieght="200px">
+			<img src="img/circle-min.png" width="200px" hieght="200px">
 			<br>
 			<h1>Arturo Avilés</h1>
 			</center>
