Optimize index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <br><br><br><br>
 		<div class="container">
 			<center>
-			<img src="img/circle-minkp.png" width="200px" hieght="200px">
+			<img src="img/circle-minkpx15.png" width="200px" hieght="200px">
 			<br>
 			<h1>Arturo Avilés</h1>
 			</center>
