--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <img src="img/team/circle-minkpx20.png" class="img-responsive img-circle" alt="">
+                <img src="img/team/circle-minkpx20.png" class="img-responsive img-circle" alt="" width="500px" height="500px">
                 <div class="intro-lead-in">I am Arturo Avilés!</div>
                 <div class="intro-heading">It's Nice To Meet You</div>
                 <a href="#services" class="page-scroll btn btn-xl">Tell Me More</a>
