--- a/index.html
+++ b/index.html
@@ -321,8 +321,8 @@
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h4>Kay Garland</h4>
+                        <img src="img/team/5.jpg" class="img-responsive img-circle" alt="">
+                        <h4>Amelia Zadro</h4>
                         <p class="text-muted">Lead Designer</p>
                         <ul class="list-inline social-buttons">
                             <li><a href="#"><i class="fa fa-twitter"></i></a>
